--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
     "npm-run-all": "^2.3.0",
     "sass": "^1.43.2"
